Добавлена возможность редактировать заметку
Activity добавления заметки было переделано в Activity
редактора заметки. Если мы переходим в это Activity
через кнопку добавления, то будет отсутсовать кнопка
удаления заметки и поля будут пустыми. Если же нажмём на
уже существующую заметку, то данные подтянутся из базы
данных и поля будут заполнены с возможностью редактирования,
также будет видна кнопка для удаления заметки.

Функционал по добавлению заметки переехал из
MainActivity в NoteEditorActivity.

В NoteDao был добавлен запрос для получения заметки по её
id. Это нужно для редактирования заметки.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".activity.SettingsActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.AddNoteActivity"
+            android:name=".activity.NoteEditorActivity"
             android:exported="false" />
         <activity
             android:name=".activity.MainActivity"
